# Smart-Invoice-Follow-Up-Workflow

./: .cursorignore  .cursorrules  .env.example  .env.test.example  .gitignore  .scaffolding-version  00_Index_smart-invoice-workflow.md  2-23-read-this.md  AGENTS.md  AUDIT_2026-02-05.md  Automatic_Invoice_Collection_System_From_Scratch.md  BUSINESS IDEA.md  CLAUDE.md  DECISIONS.md  Dockerfile  EXTERNAL_RESOURCES.yaml  GOOGLE_SHEET_TEMPLATE.md  IMPLEMENTATION_PROGRESS.md  Integration HTTP, Google Sheets, Tools, Gmail.blueprint.json  LAUNCH_CHECKLIST.md  MAKE_BUILDING_NOTES.md  OPENCLAW_HANDOFF.md  PRD.md  PRIVACY_POLICY.md  PROGRESS.md  PROPOSAL_FINAL.md  QUICK_START.md  README.md  RESEARCH_GOOGLE_AUTH_FOR_END_USERS.md  REVIEWS_AND_GOVERNANCE_PROTOCOL.md  RUNBOOK.md  SALES_STRATEGY.md  SETUP.md  SHIP_CHECKLIST.md  START_HERE_TOMORROW.md  TERMS_OF_SERVICE.md  main.py  package-lock.json  package.json  playwright.config.js  (+3 more)
.agent/: instructions.md
.agent/rules/: FIRST_SALE_GUIDE.md  SALES_STRATEGY.md  governance.md  instructions.md
.agentsync/: README.md
.agentsync/rules/: 00-full-content.md  00-overview.md
.kiro/specs/smart-invoice/: design.md  requirements.md  tasks.md
Documents/: README.md
Documents/core/: Automatic_Invoice_Collection_System_From_Scratch.md
Documents/guides/: QUICK_START.md  SETUP.md
Documents/reference/: GOOGLE_SHEET_TEMPLATE.md
_handoff/: task_weekly_digest_service.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_system_state.py  003_add_billing_last_event_at.py  003_add_google_oauth_columns.py  004_add_stripe_events.py  005_add_leads_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  billing.py  cron.py  digest.py  google_oauth.py  leads.py  notifications.py  onboarding.py  system.py  users.py  webhooks.py
backend/app/core/: auth.py  config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  job_history.py  lead.py  stripe_event.py  system_state.py  user.py
backend/app/schemas/: __init__.py  digest.py  invoice.py  job_history.py  lead.py  notification.py  system.py  user.py  webhook.py
backend/app/services/: __init__.py  alerts.py  daily_processing.py  digest.py  email_templates.py  escalation.py  google_gmail.py  google_sheets.py  google_tokens.py  google_workspace.py  notifications.py  soak_metrics.py  system_state.py  venture_workflow.py
backend/app/templates/: digest_email.html  error_generic.html  error_google_connection.html  error_sheet_access.html
case-studies/: JP-Middleton.md  business-sources.md  gemini-ideas-business-research.md  pricing-research.md
docs/: E2E_TESTING_PLAN.md  SUMMARY.md  TOMORROW_MORNING_START_HERE.md  launch-readiness-v1.md  task_5104_prompt.md  task_5105_prompt.md  task_5106_prompt.md
make-blueprints/: SIW - Create Template.blueprint.json  SIW - Daily Processing.blueprint (1).json  SIW - List Sheets.blueprint.json  SIW - Validate Sheet.blueprint.json  SIW_Create_Template_blueprint.json
scripts/: pre_review_scan.sh
src/invoice_collector/: __init__.py  config.py  emailer.py  models.py  router.py  scheduler.py  sheets.py
static/: billing.html  dashboard.html  index.html  login.html  onboarding.html  privacy.html  settings.html  terms.html
static/js/: google-ads.js
tests/: __init__.py  conftest.py  test_api_lifecycle.py  test_auth_jwks.py  test_error_tracking.py  test_google_workspace.py  test_leads.py  test_observability_alerts.py  test_router.py  test_startup_guards.py  test_templates.py
tests/e2e/: auth-setup.spec.js  populate-test-sheet.js  test-utils.js  test_authenticated.spec.js  test_escalation_e2e.spec.js  test_no_auth.spec.js  test_security_stress.spec.js  test_sheet_stress.spec.js  test_stripe_lifecycle.spec.js  test_user_flows.spec.js  test_visual_snapshots.spec.js
(+6 files in other folders)
