[project]
name = "invoice-collector"
version = "1.0.0"
description = "Automated invoice collection system that creates Gmail drafts for overdue invoice reminders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.151.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "APScheduler>=3.10.4",
    "tabulate>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
